Edit/Insert Activity UI fixes - Use core-scroll-header to keep title visible even after activity detail implementation - Reorganized spaces inside the dialog - Reorganized layout with polymer layout attributes - Created class paper-dialog.tall to set height 90% and keep it after the dialog is toggled closed and opened again

--- a/css/polymerDetails.css
+++ b/css/polymerDetails.css
@@ -52,6 +52,9 @@ paper-dialog {
 	min-width			: 430px;
 	min-height			: 30%
 }
+paper-dialog.tall{
+  height:90%;
+}
 core-menu	{
 	position			: absolute;
 	top					: 70px;
@@ -96,7 +99,7 @@ paper-fab	{
 }
 
 paper-input{
-  width:100%;
+  width:auto;
 
 }
 
